# teaching-assistant-obe

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SIMULASI.md  SPEC.md  TI B1 2024 OBE.xlsx  pyproject.toml  railway.json
analysis/: 01-registrasi-absensi-workflow.md
docs/superpowers/plans/: 2026-07-08-discord-channel-architecture.md
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  client.py  events.py
src/bot/commands/: __init__.py  admin.py  assignments.py  attendance.py  exams.py  groups.py  registration.py  reports.py  setup_registration.py
src/bot/events/: __init__.py  on_member_join.py
src/bot/views/: __init__.py  buttons.py  modals.py  select_views.py  selects.py
src/database/: __init__.py  engine.py  models.py
src/services/: __init__.py  assignments.py  attendance.py  exams.py  gamification.py  grading.py  obe.py  registration.py
src/tasks/: __init__.py  jobs.py  scheduler.py
src/utils/: __init__.py  constants.py  helpers.py  validators.py
